--- a/src/main/resources/styles/root.css
+++ b/src/main/resources/styles/root.css
@@ -3,6 +3,18 @@
     -fx-background-radius: 30;
     -fx-border-radius: 30;
     -fx-padding: 20;
+
+    -fx-font-family: Roboto;
+    -fx-font-weight: 400;
+}
+
+#rootHeader {
+    -fx-alignment: center-left;
+}
+
+#headerButtons {
+    -fx-alignment: center-right;
+    -fx-spacing: 10;
 }
 
 #closeIcon {
