--- a/src/main/resources/styles/root.css
+++ b/src/main/resources/styles/root.css
@@ -1,15 +1,17 @@
+@import "../font/roboto.css";
+
 #rootPane {
     -fx-background-color: white;
     -fx-background-radius: 30;
     -fx-border-radius: 30;
-    -fx-padding: 20;
 
     -fx-font-family: Roboto;
-    -fx-font-weight: 400;
+    -fx-font-size: 12px;
 }
 
 #rootHeader {
     -fx-alignment: center-left;
+    -fx-padding: 10 20 10 20;
 }
 
 #headerButtons {
