--- a/src/main/resources/styles/window-header.css
+++ b/src/main/resources/styles/window-header.css
@@ -7,38 +7,38 @@
     -fx-spacing: 10;
 }
 
-#close-icon {
+.close-icon {
     -mfx-color: #ff0000;
     -fx-opacity: 1;
 }
 
-#close-icon:hover {
+.close-icon:hover {
     -fx-opacity: 1.3;
 }
 
-#close-icon:pressed {
+.close-icon:pressed {
     -mfx-color: #ff0000;
     -fx-opacity: 1.5;
 }
 
-#minimize-icon {
+.minimize-icon {
     -mfx-color: #FFBF37;
     -fx-opacity: 1;
 }
 
-#minimize-icon:hover {
+.minimize-icon:hover {
     -fx-opacity: 1.5;
 }
 
-#always-on-top-icon {
+.always-on-top-icon {
     -mfx-color: purple;
     -fx-opacity: 1.0;
 }
 
-#always-on-top-icon:hover {
+.always-on-top-icon:hover {
     -fx-opacity: 1.5;
 }
 
-#always-on-top-icon:always-on-top {
+.always-on-top-icon:always-on-top {
     -fx-opacity: 1.5;
 }
